--- a/style.css
+++ b/style.css
@@ -9,19 +9,25 @@
 }
 
 html {
-  --color-1: white;
-  --color-2: whitesmoke;
-  --color-3: rgb(12, 113, 224);
-  --banner: url("/img/dayMode.jpg");
+  --bg: #FBFBF8;
+  --bg-content: rgb(12, 113, 224);
+  --bg-txt: #F2F3F4;
+  --svg: rgb(45, 126, 244);
+  --txt: #FBFBF8;
+
+  --banner: url("/img/day.jpg");
   --arrow: url("/img/dayArrow.png");
   scroll-behavior: smooth;
 }
 
 .dark-mode {
-  --color-1: black;
-  --color-2: darkgray;
-  --color-3: #990000;
-  --banner: url("/img/nightMode.jpg");
+  --bg: #050505;
+  --bg-content: black;
+  --bg-txt: #090909;
+  --svg: #660000;
+  --txt: #D2D2D2;
+
+  --banner: url("/img/night.jpg");
   --arrow: url("/img/nightArrow.png");
 }
 
@@ -45,7 +51,7 @@ body {
 }
 
 #configMenu {
-  background-color: var(--color-2);
+  background-color: #828382;
   border-radius: 4vmin;
   box-shadow: 0 0.3vmin 0.6vmin 0 black, 0 0 1vmin 1vmin black;
   height: 8vmin;
@@ -61,9 +67,11 @@ body {
 
 .switch {
   position: relative;
+  top: 35%;
+  left: 20%;
   display: inline-block;
-  width: 60px;
-  height: 34px;
+  width: 6vmin;
+  height: 3.4vmin;
 }
 
 .switch input {
@@ -79,27 +87,27 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: var(--color-3);
+  background-color: var(--svg);
   transition: 0.4s;
 }
 
 .slider:before {
   position: absolute;
   content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: var(--color-1);
+  height: 2.6vmin;
+  width: 2.6vmin;
+  left: 0.4vmin;
+  bottom: 0.4vmin;
+  background-color: var(--bg);
   transition: .4s;
 }
 
 input:checked+.slider:before {
-  transform: translateX(26px);
+  transform: translateX(2.6vmin);
 }
 
 .slider.round {
-  border-radius: 34px;
+  border-radius: 2vmin;
 }
 
 .slider.round:before {
@@ -117,7 +125,7 @@ svg {
 }
 
 g {
-  fill: var(--color-3);
+  fill: var(--svg);
 }
 
 main,
@@ -129,7 +137,7 @@ section {
 }
 
 .background::before {
-  color: var(--color-2);
+  color: var(--bg-txt);
   content: "EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND ";
   font-size: 2vmax;
   font-weight: 900;
@@ -139,7 +147,7 @@ section {
 }
 
 .pageContent {
-  background: linear-gradient(to bottom, rgba(12, 113, 224, 0.2), var(--color-3) 20%), var(--banner) bottom;
+  background: linear-gradient(to bottom, rgba(12, 113, 224, 0.2), var(--bg-content) 20%), var(--banner) bottom;
   border-radius: 5vmin;
   box-shadow: 0 0.4vmin 0.8vmin 0 black, 0 0 2vmin 1vmin black;
   height: 70vh;
@@ -150,12 +158,12 @@ section {
   right: 0;
   bottom: 0;
   left: 0;
-  transition: opacity 0.5s;
+  transition:  0.5s ;
   z-index: 10;
 }
 
 .background {
-  background-color: var(--color-1);
+  background-color: var(--bg);
   height: 100vh;
   width: 100vw;
 }
@@ -224,7 +232,7 @@ section {
 }
 
 h1 {
-  color: var(--color-1);
+  color: var(--txt);
   font-size: 4vmax;
   font-weight: 900;
   margin: 5vmin 0 3vmin 0;
@@ -232,7 +240,7 @@ h1 {
 }
 
 p {
-  color: var(--color-1);
+  color: var(--txt);
   font-size: 3vmin;
   font-weight: 400;
   margin: 0 7vmin;
