--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
   bottom: 3vmin;
   height: 8vmin;
   width: 8vmin;
-  transition: bottom 1s;
+  transition: bottom 1s, right 1s;
   z-index: 20;
 }
 
