--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ html {
   --bg-txt: #F2F3F4;
   --svg: rgb(45, 126, 244);
   --txt: #FBFBF8;
+  --inverse: #050505;
 
   --banner: url("/img/day.jpg");
   --arrow: url("/img/dayArrow.png");
@@ -26,6 +27,7 @@ html {
   --bg-txt: #090909;
   --svg: #660000;
   --txt: #D2D2D2;
+  --inverse: #660000;
 
   --banner: url("/img/night.jpg");
   --arrow: url("/img/nightArrow.png");
@@ -35,6 +37,30 @@ body {
   overflow: hidden;
   /* Hide scrollbar */
 }
+
+nav {
+  width: 50vw;
+  height: 7vh;
+  border-radius: 0px 0px 50px 50px;
+  background-color: var(--bg-content);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  transform: translate(50%, 0);
+  
+  z-index: 20;
+}
+
+  a {
+    font-weight: 900;
+    font-size: 2.2vmin;
+    text-shadow: 0vmin -0.4vmin var(--inverse);
+    color: var(--txt)
+  }
 
 #config {
   background-color: white;
@@ -61,6 +87,23 @@ body {
   bottom: 3vh;
   transition: bottom 1s, width 0.3s;
   z-index: 19;
+}
+
+#aboutMe .pageContent{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#profilePic img{
+  width: 35vmin;
+  height: 35vmin;
+  margin: 5vmin;
+  border-radius: 50%;
+}
+
+#profileText {
+  width: 50vmin;
 }
 
 /*-----------------------SWITCH--------------------------*/
@@ -238,16 +281,12 @@ section {
 
 h1 {
   color: var(--txt);
-  font-size: 4vmax;
+  font-size: 3.5vmax;
   font-weight: 900;
-  margin: 5vmin 0 3vmin 0;
-  text-align: center;
 }
 
 p {
   color: var(--txt);
   font-size: 3vmin;
   font-weight: 400;
-  margin: 0 7vmin;
-  text-align: left;
 }
