--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
   box-sizing: border-box;
 }
 
+
+
+
 html {
   --bg: #FBFBF8;
   --bg-content: rgb(12, 113, 224);
@@ -51,10 +54,16 @@ p {
 }
 
 a {
+  text-decoration: none;
   font-weight: 900;
   font-size: 2.2vmin;
   text-shadow: 0vmin -0.4vmin var(--inverse);
   color: var(--txt)
+}
+
+.glowText {
+  color: #EEDD11;
+  text-shadow:  0 0 0.1vmin #FFFFFF, 0 0 0.2vmin #FFFFFF, 0 0 0.3vmin #FF0000, 0 0 0.4vmin #0000FF, 0 0 1vmin #FFFFFF; 
 }
 
 nav {
